Attempting to fix alignment of seating chart on windows.

--- a/style/all.css
+++ b/style/all.css
@@ -537,14 +537,14 @@ table.tac th {
 	border : 0;
 	height : 22px;
 	padding : 0 0 !important;
-	width : 17px;
+	width : 22px;
 }
 
 .seating-chart .p2 th {
 	border : 0;
 	height : 23px;
 	padding : 0 0 !important;
-	width : 12px;
+	width : 22px;
 
 }
 
